--- a/photo-deployer/.gitignore
+++ b/photo-deployer/.gitignore
@@ -2,9 +2,13 @@
 !jest.config.js
 *.d.ts
 node_modules
+.vscode/
+outputs.json
+
+# Testing
+.env
+test
 
 # CDK asset staging directory
 .cdk.staging
 cdk.out
-
-test
